--- a/CSS/stylesheet1.css
+++ b/CSS/stylesheet1.css
@@ -1,10 +1,21 @@
+body{
+    margin: 0px;
+}
+
 #menuBar{
     width: 10%;
     height: 100%;
     text-align: left;
     position: fixed;
-    background-color: white;
-    color: black;
+    background-color: #eee;
+    color: #252a33;
+}
+
+#menuIcon{
+    background-color: #eee;
+    padding: 0;
+    border: none;
+    outline: none;
 }
 
 #backgroundImage{
@@ -20,6 +31,98 @@
     height: 100%;
     position: absolute;
     right: 0;
-    padding-right: 10%;
-    color: black;
+    color: #252a33;
+}
+
+#lightbulb{
+    width: 40%;
+    padding-right: 50%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+:root {
+    --color-bg: #eee;
+    --color-text: #252a33;
+    --color-text-subtle: #707c80;
+}
+
+[data-termynal] {
+    width: 750px;
+    max-width: 100%;
+    background: var(--color-bg);
+    color: var(--color-text);
+    font-size: 18px;
+    font-family: 'Fira Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
+    border-radius: 4px;
+    padding: 75px 45px 35px;
+    position: relative;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+[data-termynal]:before {
+    content: '';
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    /* A little hack to display the window buttons in one pseudo element. */
+    background: #d9515d;
+    -webkit-box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+            box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+}
+
+[data-ty] {
+    display: block;
+    line-height: 2;
+}
+
+[data-ty]:before {
+    /* Set up defaults and ensure empty lines are displayed. */
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+}
+
+[data-ty="input"]:before,
+[data-ty-prompt]:before {
+    margin-right: 0.75em;
+    color: var(--color-text-subtle);
+}
+
+[data-ty="input"]:before {
+    content: '$';
+}
+
+[data-ty][data-ty-prompt]:before {
+    content: attr(data-ty-prompt);
+}
+
+[data-ty-cursor]:after {
+    content: attr(data-ty-cursor);
+    font-family: monospace;
+    margin-left: 0.5em;
+    -webkit-animation: blink 1s infinite;
+            animation: blink 1s infinite;
+}
+
+
+/* Cursor animation */
+
+@-webkit-keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
 }
