--- a/CSS/stylesheet1.css
+++ b/CSS/stylesheet1.css
@@ -2,8 +2,24 @@ body{
     margin: 0px;
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 #menuBar{
-    width: 10%;
+    width: 5%;
     height: 100%;
     text-align: left;
     position: fixed;
@@ -11,36 +27,100 @@ body{
     color: #252a33;
 }
 
-#menuIcon{
+.menuIcon{
     background-color: #eee;
-    padding: 0;
     border: none;
     outline: none;
+    padding-bottom: 15%;
+    text-align: left;
+    width: 100%;
+}
+
+.menuIcon img{
+    width: 80%;
+    height: auto;
+    display: block;
+    padding-bottom: 30%;
+    padding-left: 15%;
+    margin: auto;
+}
+
+#logo{
+    border-bottom: 1px;
+
+}
+
+#logo img{
+    width: 80%;
+    height: auto;
+    display: block;
+    padding-left: 15%;
+}
+
+#logoName{
+    text-align: center;
+    color: #252a33;
+    text-decoration: none;
+    padding-bottom: 20%;
 }
 
 #backgroundImage{
-    width: 90%;
+    width: 95%;
     height: 100%;
     position: absolute;
     right: 0;
     background-image: url("../Resources/lightPattern.png");
+    background-size: contain;
 }
 
 #pageContent{
-    width: 90%;
+    width: 95%;
     height: 100%;
     position: absolute;
     right: 0;
     color: #252a33;
 }
 
-#lightbulb{
-    width: 40%;
-    padding-right: 50%;
-}
-
 ul {
   list-style-type: none;
+  text-align: left;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  padding-top: 10%;
+}
+
+.container{
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .33s ease;
+  background-color: #eee;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.textContent {
+  color: #252a33;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
 
 :root {
