Added extra stuff from old cpu

--- a/CSS/stylesheet2.css
+++ b/CSS/stylesheet2.css
@@ -116,7 +116,8 @@ ul {
 }
 
 .textContent {
-  color: #eee;
+  /*color: #eee;*/
+  color: #08fdd8;
   font-size: 15px;
   position: absolute;
   top: 40%;
