--- a/CSS/stylesheet2.css
+++ b/CSS/stylesheet2.css
@@ -120,6 +120,11 @@ ul {
   height: 80%;
 }
 
+#pageContent h1{
+  padding-left: 39%;
+  padding-bottom: 2%;
+}
+
 .skills{
   width: 150px;
   height: 150px;
@@ -145,7 +150,6 @@ ul {
   width: 100%;
   opacity: 0;
   transition: .33s ease;
-  background-color: #30333B;
   cursor:pointer;
 }
 
@@ -153,17 +157,63 @@ ul {
   opacity: 1;
 }
 
+.container:hover img{
+  opacity: 0;
+}
+
 .textContent {
-  /*color: #eee;*/
   color: #08fdd8;
   font-size: 15px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
 
+.textContent2 {
+  color: #252a33;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-weight: bold;
+  font-size: 30;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.jobContent{
+  padding-bottom: 8%;
+}
+
+.jobContent img{
+  width: 15%;
+  height: auto;
+  float: left;
+  padding-right: 3%;
+  margin-bottom: 2%;
+}
+
+.jobContent h2{
+  margin-bottom: 0;
+}
+
+.jobContent p{
+  margin-top: 0;
+  width: 80%;
+  font-size: 18;
+}
+
+#jobDescription{
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+#sito{
+  padding-top: 2%;
+  margin-bottom: 5%;
+}
 
 :root {
     --color-bg: #252a33;
