--- a/CSS/stylesheet1.css
+++ b/CSS/stylesheet1.css
@@ -106,6 +106,7 @@ a:active {
     position: absolute;
     right: 0;
     color: #252a33;
+    padding-right: 7%;
 }
 
 ul {
@@ -145,8 +146,13 @@ ul {
 }
 
 #pageContent h1{
-  padding-left: 39%;
+  /*padding-left: 35%;*/
+  text-align: center;
   padding-bottom: 2%;
+}
+
+.fixedContainer{
+  padding-left: 7%;
 }
 
 .skills{
@@ -237,6 +243,16 @@ ul {
 #sito{
   padding-top: 2%;
   margin-bottom: 5%;
+}
+
+#YPC{
+  padding-top: 2%;
+  margin-bottom: 5%;
+}
+
+#terminalBox{
+  display: inline-block;
+  padding-left: 18%;
 }
 
 :root {
