--- a/CSS/stylesheet1.css
+++ b/CSS/stylesheet1.css
@@ -1,4 +1,4 @@
-/*@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
     #menuBar{
       width: 100%;
       height: 10%;
@@ -20,9 +20,13 @@
     .textContent{
       font-size: 10;
     }
-}*/
+}
 
 body{
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
     margin: 0px;
     font-family: 'Fira Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
 }
@@ -79,15 +83,44 @@ a:active {
   width: 60%;
   height: auto;
   display: block;
-  padding-left: 25%;
+  padding-left: 18%;
+}
+
+.logoImage{
+  content:url("../Resources/logoBlack.gif");
 }
 
 #logoName{
-    text-align: center;
-    color: #252a33;
-    text-decoration: none;
-    padding-bottom: 20%;
-    padding-top: 5%;
+  text-align: center;
+  color: #252a33;
+  text-decoration: none;
+  padding-bottom: 20%;
+  padding-top: 5%;
+}
+
+#portfolio{
+  content:url("../Resources/portfolioBlack.gif");
+}
+
+#skills{
+  content:url("../Resources/computerBlack.gif");
+}
+
+#experience{
+	content:url("../Resources/experienceBlack.gif");
+}
+
+#contact{
+	content:url("../Resources/mailBlack.gif");
+}
+
+#resume{
+	content:url("../Resources/resumeBlack.gif");
+}
+
+#lightbulb{
+	content:url("../Resources/lightbulbBlack.png");
+  width: 60%;
 }
 
 #backgroundImage{
@@ -135,6 +168,13 @@ ul {
   transition: .33s ease;
   background-color: #CECCC4;
   cursor:pointer;
+}
+
+.overlay .textContent{
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
 }
 
 .container:hover .overlay {
@@ -213,7 +253,7 @@ ul {
 }
 
 .jobContent{
-  padding-bottom: 8%;
+  padding-bottom: 9%;
 }
 
 .jobContent img{
@@ -252,6 +292,10 @@ ul {
 #terminalBox{
   display: inline-block;
   padding-left: 18%;
+}
+
+#contactInfo{
+  padding-top: 16%;
 }
 
 :root {
